--- a/implementation/frontend_prototype/package.json
+++ b/implementation/frontend_prototype/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
