--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -10,10 +10,14 @@
   "author": "Fabian Bächli",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cssnano": "^3.10.0",
+    "postcss": "^6.0.14",
+    "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0",
