--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -15,11 +15,15 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "node-sass": "^4.7.2",
     "postcss": "^6.0.14",
     "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
