--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -22,6 +22,7 @@
     "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
