--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -27,5 +27,8 @@
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
+  },
+  "devDependencies": {
+    "webpack-merge": "^4.1.1"
   }
 }
