--- a/implementation/package.json
+++ b/implementation/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mysql": "^2.15.0",
+    "odbc": "^1.3.0",
     "sha256": "^0.2.0"
   }
 }
