--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "throttle-debounce": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
