--- a/implementation/package.json
+++ b/implementation/package.json
@@ -9,11 +9,13 @@
   "author": "Fabian Bächli",
   "license": "MIT",
   "dependencies": {
+    "big-integer": "^1.6.26",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mysql": "^2.15.0",
     "odbc": "^1.3.0",
+    "randbytes": "0.0.1",
     "sha256": "^0.2.0"
   }
 }
