--- a/implementation/package.json
+++ b/implementation/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "big-integer": "^1.6.26",
     "body-parser": "^1.18.2",
+    "crypto": "^1.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mysql": "^2.15.0",
