--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "big-integer": "^1.6.26",
+    "crypto": "^1.0.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "node-sass": "^4.7.2",
