--- a/implementation/react_frontend/package.json
+++ b/implementation/react_frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.2.0",
     "react-dom-server": "0.0.5",
     "react-markdown": "^3.1.4",
+    "react-parallax-component": "^1.0.6",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
