hightling code snippets working

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,4 @@
 node_modules/
 npm-debug.log
 /implementation/react_frontend/src/client/public/bundle.js
-CanvasRenderer.js
-Projector.js
-three.js
+/implementation/react_frontend/src/client/public/style/*
